# hamiltonian-evo-simulator-uts41173

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: api.rst  conf.py  index.rst  usage.rst
docs/_templates/: module_template.rst
hamil_clever_sim/: __init__.py  entry.py  evolve_pauli.py  hamil_runner.py  inputs.py  main.tcss  main_display.py  simulation_result.py
hamil_clever_sim/components/: circuit_drawn.py  circuit_metadata.py  sparkline_controllable.py  statevector_display.py  timing_data.py
tests/: test_pauli_correctness.py  test_pauli_trotter_correctness.py
