[tool.poetry]
name = "hamil-clever-sim"
version = "1.1.0"
description = ""
authors = ["Navrin <navman360@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
qiskit = "^0.45.0"
qiskit-aer = "^0.13.0"
textual = "^0.41.0"
rich = "^13.6.0"
numpy = "^1.26.1"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.2.1"
pytest = "^7.4.3"
qiskit-algorithms = "^0.2.1"
sphinx = "^7.2.6"
insipid-sphinx-theme = "^0.4.2"
sphinx-autodoc-typehints = "^1.24.1"
sphinx-autosummary-accessors = "^2023.4.0"
sphinx-math-dollar = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
# deprecation warnings seem to be from the qiskit trotterisation implementation we are using
# to check against. Therefore we are supressing them because it is annoying and qiskit is annoying
filterwarnings = [
  'ignore:.*is deprecated as of qiskit.*:DeprecationWarning',
  'ignore:.* pending deprecation since Qiskit.*:PendingDeprecationWarning',
]
